--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@breezystack/lamejs": "^1.2.7",
     "axios": "^1.8.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "find-my-way": "^9.2.0",
     "fluent-ffmpeg": "^2.1.3",
