--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node main_home.js",
-    "dev": "nodemon main_home.js"
+    "start": "node servers/backend/main_home.js",
+    "dev": "nodemon servers/backend/main_home.js",
+    "dev_1": "nodemon servers/backend/main_home.js",
+    "dev_2": "nodemon servers/scheduler/main_home.js"
   },
   "keywords": [],
   "author": "",
@@ -16,16 +18,19 @@
     "@breezystack/lamejs": "^1.2.7",
     "audio-mixer": "^2.1.4",
     "axios": "^1.8.3",
+    "bree": "^9.2.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "find-my-way": "^9.2.0",
     "fluent-ffmpeg": "^2.1.3",
+    "i": "^0.3.7",
     "mongodb": "^6.13.1",
     "mqtt": "^5.10.4",
     "multer": "^1.4.5-lts.2",
     "node-media-server": "^4.0.12",
     "nodemon": "^3.1.9",
+    "npm": "^11.3.0",
     "raw-body": "^3.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
