--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mqtt": "^5.10.4",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.2",
+    "node-cache": "^5.1.2",
     "node-media-server": "^4.0.12",
     "nodemon": "^3.1.9",
     "npm": "^11.3.0",
